Refs #141134 - Fix z-index issue for extra facets. Improve padding in facets filters.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -184,13 +184,13 @@ div#page-document {
         box-shadow: none;
 
         div.content {
-          padding: 5px;
+          padding: 10px;
 
           div.header {
             padding: 0px;
             margin: 0px;
             color: @sf-dark-gray;
-            font-size: 14px;
+            font-size: 16px;
             font-weight: 400;
           }
         }
@@ -1032,7 +1032,7 @@ div.ui.modal.facet {
     margin-bottom: 2em;
 
     .loading-tip {
-      z-index: 10;
+      z-index: 2;
       color: black;
       font-size: x-large;
     }
